# reproaudit

./: .gitignore  README.md  SPECS.md  TECHNICAL.md  notebook.ipynb  pyproject.toml
src/project2/: main.py
src/reproaudit/: cli.py  config.py
src/reproaudit/llm/: client.py  structured.py
src/reproaudit/models/: claims.py  findings.py  report.py
src/reproaudit/pipeline/: orchestrator.py  stage1_claims.py  stage3_matching.py
src/reproaudit/pipeline/stage2_repo/: cloner.py  file_scope.py
src/reproaudit/pipeline/stage2_repo/llm_based/: analyzer.py  retriever.py  runner.py  summarizer.py
src/reproaudit/pipeline/stage2_repo/llm_based/prompts/: claim_match.py  data_availability.py  eval_integrity.py  file_summary.py
src/reproaudit/pipeline/stage2_repo/rule_based/: base.py  runner.py
src/reproaudit/pipeline/stage2_repo/rule_based/checks/: data_files.py  data_leakage.py  dependencies.py  entry_points.py  eval_metrics.py  gpu.py  notebooks.py  paths.py  pinning.py  randomness.py  sorting.py
src/reproaudit/reporting/: markdown.py
src/reproaudit/utils/: ast_utils.py  cache.py  import_map.py  logging.py  pdf.py  watchlist.py
tests/: test_main.py
tests/unit/: test_ast_utils.py  test_rule_data_leakage.py  test_rule_notebooks.py  test_rule_paths.py  test_rule_randomness.py  test_stage3_matching.py
