[project]
name = "reproaudit"
version = "0.1.0"
description = "Scientific reproducibility auditor for ML and computational biology research papers"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25",
    "click>=8.0",
    "pdfplumber>=0.10",
    "pypdf>=4.0",
    "gitpython>=3.1",
    "pydantic>=2.0",
    "ruamel.yaml>=0.18",
    "rich>=13.0",
    "packaging>=24.0",
]

[project.scripts]
reproaudit = "reproaudit.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reproaudit"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]
